# SvgTranslate

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: publish-manually.yml  pytest.yaml  python-publish.yml
CopySvgTranslate/: titles.py  workflows.py
CopySvgTranslate/extraction/: extractor.py
CopySvgTranslate/injection/: batch.py  injector.py  preparation.py
SvgTranslate/: __init__.py  workflows.py
SvgTranslate/extraction/: extractor.py
SvgTranslate/injection/: injector.py
svg_translate/: workflows.py
svg_translate/injection/: batch.py
tests/: test.py  test_additional.py  test_comprehensive.py  test_public_api.py  test_svgtranslate.py  test_titles.py
tests/example/: test_examples.py
tests/extract/: test_extract.py  test_extract_2.py
tests/manually/: titles.py
