[build-system]
requires = ["hatchling>=1.17", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "CopySvgTranslate"
dynamic = ["version"]
description = "Utilities for extracting and applying translations to multilingual SVG files."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Ibrahim Qasim" }
]
license = { text = "MIT" }
dependencies = [
  "lxml>=4.9"
]

[project.urls]
Homepage = "https://github.com/MrIbrahem/CopySvgTranslate"
Repository = "https://github.com/MrIbrahem/CopySvgTranslate"
Issues = "https://github.com/MrIbrahem/CopySvgTranslate/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["CopySvgTranslate"]

[tool.hatch.build.targets.sdist]
include = ["CopySvgTranslate"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
